<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/login_pic"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/user_login"
        android:textSize="30dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:text="@string/user_name"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="88dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:text="@string/password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="183dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0.21"
            android:inputType="textPassword" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/chooseRadios"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:checked="true"
            android:text="@string/student"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="@string/teacher"
            android:textColor="@color/black" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/login"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/reset"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/reset" />

    </LinearLayout>

</LinearLayout>