<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/score_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/score_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
<LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/score_mark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/score_mark"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/score_point"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/score_point"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/score_credit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/score_credit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
    
        <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/score_quality"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/score_quality"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
     <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/course_code"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/course_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
     <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/college"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/college"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>
     <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="fill_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:text="@string/auxiliary_mark"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/auxiliary_mark"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="22dp" />

    </LinearLayout>

</LinearLayout>